Development java 11 (#31)
* Agent refactor of rxutils to Java 11

* Agent refactor of build-tools to Java 11

* Agent refactor of tlsutils to Java 11

* Add copilot-instructions.md

* Switch to JDK 11

* Refactoring to Java 11 with co-pilot.

* Add copilot configuration

* Fix typo, simplify personality type instructions.

* Comment out Content Explorer so that the install build to fix issue #11

* Fix issue with project structure block

* Comment out Content Explorer so that the install build to fix issue #11

* Continued Java 11 refactoring with co-pilot agent

* refactored files to Java 11

* Refactored files to development-java-11 Branch

* Refactored files to development-java-11 Branch

* Refactored files to development-java-11 Branch
Memebership,comments,feeds,integrations and comments modules with pom.xml files of all delivery-tier-suite

* Refactored to Java 11 files to development-java-11 Branch
Modified all the Java and POM.xml files under deliverytiersuite/delivery-tier-suite

* Refactored to Java 11 files to development-java-11 Branch
Modified all the Java and POM.xml files under percussioncms/WebUI

* Refactored to Java 11 files to development-java-11 Branch
Modified all the Java and POM.xml files under percussioncms/rest and deployer modules

* Refactored to Java 11 files to development-java-11 Branch
Modified all the Java and POM.xml files under percussioncms/modules and projects/sitemanage/

* Refactored to Java 11 files to development-java-11 Branch
Modified all the Java and POM.xml files under projects/sitemanage except test package

* Refactored to Java 11 files to development-java-11 Branch
Modified all the Java and POM.xml files under projects/sitemanage except test package

* Refactored to Java 11 files of projects/sitemanage/test package

* more copilot refactoring

* More refactoring

* Refactor DesktopContentExplorer Module to Java 11 with JavaFX 21 (#17)

* Initial plan

* Update DesktopContentExplorer to Java 11 and JavaFX 21

Co-authored-